# adore_ros2_msgs

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  package.xml  readme.md  requirements.cmake  requirements.system
msg/: AssistanceRequest.msg  Border.msg  BorderArray.msg  BorderInterval.msg  BorderM.msg  BorderProgress.msg  CautionZone.msg  CooperativePlanning.msg  GearState.msg  GoalPoint.msg  GoalPointArray.msg  GraphValue.msg  IndicatorState.msg  InfrastructureInfo.msg  Lane.msg  LaneFollowingGeometry.msg  LaneGeometry.msg  Map.msg  MapConnection.msg  MapLane.msg  MapPoint.msg  MapRoad.msg  NodeStatus.msg  Object.msg  ObjectList.msg  Odd.msg  PassengerRequest.msg  Path.msg  PathPoint.msg  PhysicalVehicleParameters.msg  PlanningRequest.msg  PlanningResult.msg  Point2d.msg  PointArray.msg  Polygon2d.msg  RemoteOperationsBackendStatus.msg  RemoteOperationsCommand.msg  RemoteOperationsVechicleStatus.msg  Route.msg  RouteSection.msg  (+38 more)
